--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import './styles/reset.scss';
 
 body {
+  overflow: hidden;
   margin: 0;
   background-color: $bg-color-main;
   letter-spacing: 2px;
